Update api and api docs
